fix height of map on tablets

--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -125,6 +125,11 @@
 		width: 100%;
 	}
 }
+@media only screen and (max-width: 770px) and (orientation:portrait) {
+	.mainMap .map {
+		height: 90vw;
+	}
+}
 @media only screen and (max-width: 740px) and (orientation:landscape) {
 	.mainMap .map {
 		height: 85vh;
@@ -139,10 +144,5 @@
 		input[type=text] {
 			margin-right: 0;
 		}
-	}
-}
-@media only screen and (max-width: 420px) and (orientation:portrait) {
-	.mainMap .map {
-		height: 90vw;
 	}
 }
